k8s/prod/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${namespace}
  labels:
    name: ${namespace}
    environment: ${ENVIRONMENT}
